@@ -35,7 +35,6 @@
                         -Xloggc:gc.log
                         -XX:+PrintGC
                         -XX:+PrintGCDetails
-                        -XX:+PrintGCTimeStamps
                     </jvmArguments>
                     <fork>true</fork>
                 </configuration>
